2008-09-11  Ira Rosen  <irar@il.ibm.com>

	PR tree-optimization/37474
	* tree-vect-analyze.c (vect_supported_load_permutation_p): Check the
	length of load permutation.

2008-09-11  Andreas Schwab  <schwab@suse.de>

	* config/m68k/m68k.h (IRA_COVER_CLASSES): Define.

2008-09-11  Jakub Jelinek  <jakub@redhat.com>

	PR target/37382
	* expmed.c (extract_low_bits): Avoid creating invalid subregs.
	* dse.c (find_shift_sequence): Use extract_low_bits instead of
	simplify_gen_subreg.

2008-09-11  Ira Rosen  <irar@il.ibm.com>

	* tree-vect-transform.c (vectorizable_store): Use the rhs vector type
	for alias check.

2008-09-10  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/37338
	* gimplify.c (gimplify_body): Call default_rtl_profile.

	PR target/36904
	* config/rs6000/rs6000-c.c (rs6000_macro_to_expand): Return NULL
	instead of tok->val.node if not expanding to something else.  Handle
	intervening CPP_PADDING tokens.
	(altivec_categorize_keyword): Remove unneeded comparisons.

2008-09-10  Richard Guenther  <rguenther@suse.de>

	* tree-ssa-pre.c (phi_translate_1): Fix memory leak.

2008-09-10  Richard Guenther  <rguenther@suse.de>

	PR middle-end/37432
	* tree-inline.c (insert_init_stmt): Make sure to not
	insert invalid gimple stores.

2008-09-10  Sebastian Pop  <sebastian.pop@amd.com>

	PR tree-optimization/37388
	* toplev.c (process_options): Fail and warn when graphite
	flags are used, but the compiler has not been configured
	with graphite libraries.
	* graphite.c (graphite_transform_loops): Remove printfs
	to dump_file for the case when graphite is not available.

2008-09-10  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/37434:
	* config/i386/i386.c (ix86_expand_vector_init_interleave): Force
	the even element into register.
	(ix86_expand_vector_init_general): Don't use
	ix86_expand_vector_init_interleave on V16QImode and V8HImode
	if we can't move from GPR to SSE register directly.

2008-09-10  Bernd Schmidt  <bernd.schmidt@analog.com>
